[project]
name = "knowledge-graph-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.2.0",
    "neo4j>=5.28.1",
    "nlp>=0.4.0",
    "pydantic>=2.11.5",
    "spacy>=3.8.7",
]

[tool.uv]
package=true

[project.scripts]
app = "run_app:main" 

[build-system]
requires = ["setuptools>=61.0"] # Or your preferred build backend (hatchling, poetry-core)
build-backend = "setuptools.build_meta" # Or your preferred build backend