[project]
name = "knowledge-graph-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "neo4j>=5.28.1",
    "neo4j-graphrag>=1.7.0",
    "nlp>=0.4.0",
    "polar>=0.0.127",
    "pydantic>=2.11.5",
    "spacy>=3.8.7",
]

[build-system]
requires = ["setuptools>=61.0"] # Or your preferred build backend
build-backend = "setuptools.build_meta"
